Apply suggestions from code review
Co-Authored-By: Sebastian Bär <sebastian.baer@exasol.com>